Changes for the CPAN Testers Blog website
=========================================

        - upgrade to Labyrinth-5.21.
        - upgrade to Labyrinth-Plugin-Core-5.15.
        - upgrade to Labyrinth-Plugin-Articles-Diary 1.05.
        - upgrade to Labyrinth-Plugin-Event 1.04.
        - fixed distribution name in META.
        - added LICENSE file.

1.07    2014-02-16
        - removed unused files.
        - template cleanups.
        - upgrade to Labyrinth-5.20.
        - upgrade to Labyrinth-Plugin-Core-5.14.
        - updated sumhits script.

1.06    2013-03-24
        - optimised static images.
        - minimised CSS.
        - added robots.txt.
        - change to JSON for iheart 
        - split posted by and on onto 2 different lines
        - upgrade to Labyrinth 5.15.
        - added block.grango.org to Block/Allow IPs

1.05    2013-01-06
        - change file dates changed to meet W3CDTF standards.
        - added iheart styles.

1.04    2012-04-22
        - fixed META.json test.

1.03    2012-04-22
        - fixed publish status when saving edited comments.
        - upgrade to Labyrinth 5.12.
        - removed social media bar due to dubious practices.
        - added CPAN Testers Sponsors.
        - added README.
        - added minimum perl version (5.006).
        - fixed test pre-requisites.
        - reworked Makefile.PL for clarity.

1.02    2011-08-18
        - upgrade to Labyrinth 5.09.
        - upgrade to Labyrinth-Plugin-Core 5.09.
        - added titlemaps and pathmaps to settings.ini.
        - WAI WCAG v2.0 compliance updates.
        - update layout to include an update notification.
        - added a new social media bar
        - fixed images and css incorrectly pasted from wiki distro
        - revised banner logo image by Jon 'JJ' Allen.

1.01    2011-06-20
        - updates to improve presentation.
        - included a Terms & Conidtions page to meet EU Cookie Directive.
        - updates to diary and user templates for images.